# assistente-core

./: .gitignore  BOT_TIENDA.md  GUIA.md  diseno.md
bot_asistente/: .env.example  .gitignore  pyproject.toml  schema.sql
bot_asistente/app/: __init__.py  api_externo.py  config.py  demo_carniceria.py  grupos.py  identidades.py  logging_setup.py  main.py  memoria.py  notif_equipo.py  panel_admin_webhook.py  pauta.py
bot_asistente/app/admin/: _shell.py  _ui_helpers.py  actions.py  auth.py  automatizaciones.py  chats.py  contactos.py  dashboard.py  etiquetas.py  grupos.py  seguimiento.py  servicios.py  stories.py  views.py
bot_asistente/app/automatizaciones/: __init__.py  acciones.py  heartbeat.py  scheduler.py
bot_asistente/app/claude/: anthropic_client.py  client.py  intent.py  prompts.py  tools.py  tools_equipo.py
bot_asistente/app/db/: models.py  repos.py  session.py
bot_asistente/data/: equipo.yaml
bot_asistente/docs/: API_EXTERNO.md
bot_asistente/migrations/: 002_equipo_a_db.sql  003_maria_tables.sql  004_maria_tareas.sql  005_estado_tareas.sql  006_memoria_recordatorios.sql  007_seed_heartbeat.sql  008_etiquetas_contacto.sql  009_tags_seguimiento.sql  010_grupos_como_clientes.sql  011_calificacion_fit_prospecto.sql
bot_asistente/scripts/: import_clientes_contactos.py  import_contactos_dairo.py  import_contactos_vcf.py  publicar_story_diario.py  seed_catalogo.py  seed_catalogo_html.py  seed_catalogo_publico.py  seed_catalogo_whatsapp.py  seed_tarifas.py  test_seguimiento.py
bot_asistente/vps/: audit.sh  bootstrap_root.sh  bootstrap_user.sh
(+54 files in other folders)
